# aieq

./: .env.example  .gitignore  AIEQ.spec  README-RU.md  README.md  pyproject.toml  sample_preset.json
aieq/: __init__.py  audio.py  autoeq_service.py  dsp.py  models.py  storage.py  ui.py
curves/: autoeq_manifest.json
curves/devices/: CMF Buds 2 Pro.txt  Fiio JH5.txt  Realme Buds Air 7 Pro [1].txt
curves/targets/: target.txt
languages/: en.json  ru.json
scripts/: build_exe.ps1  check_audio_formats.py  check_static.py  package_portable.ps1  reset_window_layout.py  sync_autoeq_curves.py
source/: __main__.py  ai.py  audio.py  autoeq_service.py  chat_storage.py  config.py  curves.py  dsp.py  eq_intent.py  main.py  models.py  storage.py  ui.py
tests/: check_all.py  test_ai.py  test_curves.py  test_dsp.py  test_eq_intent.py  test_storage.py  test_ui.py
tests/fixtures/: device_curve.txt
