[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aieq"
version = "0.1.0"
description = "Windows parametric EQ prototype with AI preset editing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "PySide6>=6.7",
    "pyqtgraph>=0.13.7",
    "sounddevice>=0.4.7",
    "openai>=1.59.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
aieq = "aieq.main:main"

[tool.setuptools.packages.find]
include = ["aieq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

