[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aieq"
version = "0.1.0"
description = "Windows parametric EQ prototype with AI preset editing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.4,<1.25; python_version < '3.12'",
    "numpy>=1.26; python_version >= '3.12'",
    "PySide6>=6.7",
    "pyqtgraph>=0.13.7",
    "sounddevice>=0.4.7",
]

[project.optional-dependencies]
ai = [
    "llama-cpp-python>=0.3.7",
]
autoeq = [
    "autoeq>=4.1.2; python_version < '3.12'",
]
build = [
    "pyinstaller>=6.10",
    "pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pyrefly>=0.18",
    "ruff>=0.8",
]
openai = [
    "openai>=1.59.0",
]

[project.scripts]
aieq = "source.main:main"

[tool.setuptools.packages.find]
include = ["source*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 140
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".tmp",
    ".venv",
    "build",
    "dist",
    "models",
    "runtime",
    "curves/devices/autoeq",
    "curves/targets/autoeq",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyrefly]
project-includes = [
    "source/ai.py",
    "source/audio.py",
    "source/autoeq_service.py",
    "source/chat_storage.py",
    "source/config.py",
    "source/curves.py",
    "source/dsp.py",
    "source/models.py",
    "source/storage.py",
    "scripts",
    "tests",
]
project-excludes = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".tmp",
    ".venv",
    "build",
    "dist",
    "models",
    "runtime",
    "curves",
    "source/ui.py",
    "tests/test_ui.py",
]
ignore-missing-imports = ["llama_cpp"]
